Path Findng Finished

--- a/ECS_Example.vcxproj
+++ b/ECS_Example.vcxproj
@@ -52,6 +52,7 @@
     <ClInclude Include="Text.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="HUDSystem.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="src\AI\TankAi.cpp" />
     <ClCompile Include="src\components\Ai.cpp" />
